@@ -53,6 +53,7 @@
 (require 'compat)
 (require 'ert-x)
 (require 'subr-x)
+(require 'cl-lib)
 (require 'time-date)
 (require 'image)
 (require 'text-property-search nil t)
@@ -3385,6 +3386,39 @@
     (should-error (eval '(decf x 'symb) t))
     (should-error (eval '(decf x [a b c]) t))
     (ignore x)))
+
+(ert-deftest compat-color-blend ()
+  ;; example from the docstring
+  (should (equal (color-blend '(1 0.5 1) '(0 0 0) 0.75)
+                 '(0.75 0.375 0.75)))
+  ;; tests from test/lisp/color-tests.el
+  (should (equal (color-blend '(1.0 0.0 0.0) '(0.0 1.0 0.0)) '(0.5 0.5 0.0)))
+  (should (equal (color-blend '(1.0 1.0 1.0) '(0.0 1.0 0.0)) '(0.5 1.0 0.5)))
+  (should (equal (color-blend '(0.0 0.39215686274509803 0.0) '(0.9607843137254902 0.8705882352941177 0.7019607843137254))
+                 '(0.4803921568627451 0.6313725490196078 0.3509803921568627)))
+  ;; other tests
+  (should (equal (color-blend '(1 0.5 1) '(0 0 0) 1)
+                 '(1 0.5 1)))
+  (should (cl-equalp (color-blend '(1 0.5 1) '(0 0 0) 0)
+                     '(0 0 0)))
+  (should (cl-equalp (color-blend '(1 0.5 1) '(0 0 0) 1.0)
+                     '(1 0.5 1)))
+  (should (cl-equalp (color-blend '(1 0.5 1) '(0 0 0) 0.0)
+                     '(0 0 0)))
+  (should (cl-equalp (color-blend '(100 0 0) '(0 0 0))
+                     '(50 0 0)))
+  (should (cl-equalp (color-blend '(-100 0 0) '(100 0 0))
+                     '(0 0 0)))
+  (should-error (color-blend 'red 'blue))
+  (should-error (color-blend "red" "#0000ff"))
+  (should-error (color-blend '() '()))
+  (should (cl-equalp (color-blend '(0 0 0 0) '(1 1 1 1))
+                     '(0.5 0.5 0.5)))
+  (should-not (cl-equalp (color-blend '(0 0 0) '(1 1 1) (/ 0.0))
+                         '(-0.0e+NaN -0.0e+NaN -0.0e+NaN)))
+  (should-error (color-blend '(0 0 zero) '(1 1 1)))
+  (should-error (color-blend '(0 0 0) '(1 1 one)))
+  (should-error (color-blend [0 0 0] [1 1 1])))
 
 (provide 'compat-tests)
 ;;; compat-tests.el ends here
